# haskell-tz

./: .gitignore  README.md  build-tzdata.sh  stack.yaml  tz.cabal
Data/Time/: Zones.hs
Data/Time/Zones/: .gitignore  All.hs  All.hs.template  Internal.hs  Read.hs  TH.hs  Testing.hs  Types.hs
Data/Time/Zones/Internal/: CoerceTH.hs  PosixTz.hs
benchmarks/: benchConv.hs  benchGreg.hs  benchTZ.hs  bench_c_localtime.hs
examples/: exampleTH.hs
posix/: TzPosixCompat.hsc
tests/: testAll.hs  testTH.hs  testTZ.hs  testTZSys.hs
tools/: .gitignore  genZones.hs
